# ShadertoyViewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
config/: config-linux.sh  config-mac.sh  config-win.bat  crosscomp-sources-arm32.list  crosscomp-sources.list
src/: HTTP.cpp  ImageCache.cpp  ImgCache.hpp  NativeDialog.cpp  NativeDialog.hpp  Render.cpp  SaveImg.cpp  SaveImg.hpp  Shader.cpp  Shader.hpp  Utility.hpp  main.cpp
